# LogDoctor

./: .dockerignore  BSD_uninstall.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOW_TO_COMPILE.md  HOW_TO_INSTALL.md  HOW_TO_UPDATE.md  LINUX_build_install.sh  LINUX_build_update.sh  LINUX_uninstall.sh  MAC_build_install.sh  MAC_build_update.sh  README.md  TRANSLATING.md  WIN_build_install_1.bat  WIN_build_install_2.bat  WIN_build_update_1.bat  WIN_build_update_2.bat  build_install.bat  build_install.sh  build_update.bat  build_update.sh  builder.bat  craplog.cpp  craplog.ui  main.cpp  uninstall.sh  version.txt
craplog/: CMakeLists.txt  Craplog_en_EN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modules.h  utilities.h
craplog/modules/: checks.cpp  checks.h  dialogs.cpp  dialogs.h  tb.cpp  tb.h
craplog/modules/charts/: donuts.cpp
craplog/resources/: resources.qrc
craplog/tools/: craplog.cpp  craplog.h
craplog/tools/craplog/: craplog.cpp  craplog.h
craplog/tools/crapview/: crapview.cpp  crapview.h
craplog/translations/: Craplog_en_EN.ts  Craplog_es_ES.ts  Craplog_fr_FR.ts  Craplog_it_IT.ts
craplog/utilities/: colors.cpp  colors.h  io.cpp  io.h  logs.cpp  logs.h  rtf.cpp  rtf.h  strings.cpp  strings.h  vectors.cpp  vectors.h
craplog/window/: craplog.cpp  craplog.h
craplog/windows/: craplog.cpp
logdoctor/: CMakeLists.txt  lib.h  main.cpp  main_lib.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
logdoctor/cmake/: build.cmake  customs.cmake  dependencies.cmake  games.cmake  globals.cmake  install.cmake  main.cmake  modules.cmake  project.cmake  sources.cmake  tests.cmake  tools.cmake  translations.cmake  utilities.cmake
logdoctor/customs/: CMakeLists.txt  logfile_treewidgetitem.h  treewidgetitems.h
logdoctor/customs/models/: CMakeLists.txt  languages_listmodel.cpp  languages_listmodel.h  logfields_listmodel.cpp  logfields_listmodel.h
logdoctor/defines/: web_servers.h
logdoctor/games/: CMakeLists.txt  crisscross.cpp  crisscross.h  crisscross.ui  game_dialog.cpp  game_dialog.h  game_dialog.ui  games.cpp  games.h  snake.cpp  snake.h  snake.ui
logdoctor/games/crisscross/: CMakeLists.txt  crisscross.ui  game.cpp  game.h
logdoctor/games/snake/: CMakeLists.txt  food.cpp  food.h  game.cpp  game.h  snake.cpp  snake.h  snake.ui
logdoctor/globals/: CMakeLists.txt  db_names.cpp  db_names.h  global_configs.cpp  global_configs.h  security.cpp  security.h
logdoctor/modules/: CMakeLists.txt  checks.cpp  checks.h  dialogs.cpp  dialogs.h  exceptions.cpp  exceptions.h  shared.cpp  shared.h  tb.cpp  tb.h
logdoctor/modules/blacklists/: CMakeLists.txt  blacklists.cpp  blacklists.h
logdoctor/modules/changelog/: CMakeLists.txt  changelog.cpp  changelog.h  changelog.ui
logdoctor/modules/charts/: donuts.cpp
logdoctor/modules/crapconf/: CMakeLists.txt  lib.h
logdoctor/modules/craphelp/: CMakeLists.txt  craphelp.cpp  craphelp.h  craphelp.ui
logdoctor/modules/crapinfo/: CMakeLists.txt  crapinfo.cpp  crapinfo.h  crapinfo.ui
logdoctor/modules/craplog/: CMakeLists.txt  craplog.cpp  craplog.h  lib.h
logdoctor/modules/crapup/: CMakeLists.txt  crapup.cpp  crapup.h  crapup.ui
logdoctor/modules/crapview/: CMakeLists.txt  crapview.cpp  crapview.h  lib.h
logdoctor/modules/database/: CMakeLists.txt  database.cpp  database.h
logdoctor/modules/dialogs/: CMakeLists.txt  boolean_dialog.cpp  boolean_dialog.h  dialogbool.cpp  dialogbool.h  dialogbool.ui  dialogdia.cpp  dialogdia.h  dialogdia.ui  dialogmsg.cpp  dialogmsg.h  dialogmsg.ui  ida_dialog.cpp  ida_dialog.h  ida_dialog.ui  message_dialog.cpp  message_dialog.h  message_dialog.ui
logdoctor/modules/security/: CMakeLists.txt  path.cpp  path.h
logdoctor/modules/warnlists/: CMakeLists.txt  warnlists.cpp  warnlists.h
logdoctor/resources/: CMakeLists.txt  resources.qrc
logdoctor/resources/translations/: LogDoctor_ar_AR.qm  LogDoctor_az_AZ.qm  LogDoctor_bg_BG.qm  LogDoctor_bn_BN.qm  LogDoctor_ca_SP.qm  LogDoctor_cs_CZ.qm  LogDoctor_da_DA.qm  LogDoctor_de_GE.qm  LogDoctor_el_GR.qm  LogDoctor_en.qm  LogDoctor_en_GB.qm  LogDoctor_eo_EO.qm  LogDoctor_es.qm  LogDoctor_es_ES.qm  LogDoctor_es_SP.qm  LogDoctor_et_ES.qm  LogDoctor_fa_PE.qm  LogDoctor_fi_FI.qm  LogDoctor_fr.qm  LogDoctor_fr_FR.qm  LogDoctor_ga_IR.qm  LogDoctor_he_HE.qm  LogDoctor_hi_IN.qm  LogDoctor_hu_HU.qm  LogDoctor_id_ID.qm  LogDoctor_it.qm  LogDoctor_it_IT.qm  LogDoctor_ja_JP.qm  LogDoctor_ko_KO.qm  LogDoctor_lt_LI.qm  LogDoctor_lv_LA.qm  LogDoctor_ms_MA.qm  LogDoctor_nb_NB.qm  LogDoctor_nl_NL.qm  LogDoctor_pl_PL.qm  LogDoctor_pt_BR.qm  LogDoctor_pt_PT.qm  LogDoctor_ro_RO.qm  LogDoctor_ru_RU.qm  LogDoctor_sk_SK.qm  (+10 more)
logdoctor/tests/: lib.h  main.cpp  white_box.cpp  white_box.h
logdoctor/tools/: CMakeLists.txt  shared.h
logdoctor/tools/craphelp/: craphelp.cpp  craphelp.h  craphelp.ui
logdoctor/translations/: Craplog_es_ES.ts  LogDoctor_ar_AR.ts  LogDoctor_az_AZ.ts  LogDoctor_bg_BG.ts  LogDoctor_bn_BN.ts  LogDoctor_ca_SP.ts  LogDoctor_cs_CZ.ts  LogDoctor_da_DA.ts  LogDoctor_de_GE.ts  LogDoctor_el_GR.ts  LogDoctor_en.ts  LogDoctor_en_GB.ts  LogDoctor_eo_EO.ts  LogDoctor_es.ts  LogDoctor_es_ES.ts  LogDoctor_es_SP.ts  LogDoctor_et_ES.ts  LogDoctor_fa_PE.ts  LogDoctor_fi_FI.ts  LogDoctor_fr.ts  LogDoctor_fr_FR.ts  LogDoctor_ga_IR.ts  LogDoctor_he_HE.ts  LogDoctor_hi_IN.ts  LogDoctor_hu_HU.ts  LogDoctor_id_ID.ts  LogDoctor_it.ts  LogDoctor_it_IT.ts  LogDoctor_ja_JP.ts  LogDoctor_ko_KO.ts  LogDoctor_lt_LI.ts  LogDoctor_lv_LA.ts  LogDoctor_ms_MA.ts  LogDoctor_nb_NB.ts  LogDoctor_nl_NL.ts  LogDoctor_pl_PL.ts  LogDoctor_pt.ts  LogDoctor_pt_BR.ts  LogDoctor_pt_PT.ts  LogDoctor_ro_RO.ts  (+12 more)
logdoctor/utilities/: CMakeLists.txt  arrays.h  bwlists.h  bwutils.cpp  chars.h  checks.cpp  checks.h  colors.cpp  colors.h  gzip.cpp  gzip.h  io.cpp  io.h  memory.cpp  memory.h  printables.cpp  printables.h  result.cpp  result.h  rtf.cpp  rtf.h  strings.cpp  strings.h  stylesheets.cpp  stylesheets.h  vectors.cpp  vectors.h
logdoctor/workarounds/: CMakeLists.txt  lib.h  ranges_enumerate.h  ranges_join.h  ranges_zip.h
scripts/: builder.bat  (+17 more)
(+638 files in other folders)
